update for rustdesk 1.2.2
