# app/Controllers/SystemController/heartbeat.go
@@ -2,9 +2,17 @@ package SystemController
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/iceking2nd/rustdesk-api-server/app/Controllers"
 	"net/http"
 	"time"
 )
+
+type HeartBeatRequest struct {
+	ID         string `json:"id"`
+	ModifiedAt int64  `json:"modified_at"`
+	UUID       string `json:"uuid"`
+	Version    int64  `json:"ver"`
+}
 
 type HeartBeatResponse struct {
 	ModifiedAt int64 `json:"modified_at"`
@@ -15,12 +23,16 @@ type HeartBeatResponse struct {
 // @Schemes
 // @Description Heartbeat with clients
 // @Tags System
-// @Security ApiKeyAuth
 // @Accept json
 // @Produce json
 // @Success 200 {object} HeartBeatResponse "Always return unix timestamp of current time"
-// @Router /heartbeat [get]
 // @Router /heartbeat [post]
 func HeartBeat(c *gin.Context) {
+	var data HeartBeatRequest
+	err := c.ShouldBindJSON(&data)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, Controllers.ResponseError{Error: err.Error()})
+		return
+	}
 	c.JSON(http.StatusOK, gin.H{"modified_at": time.Now().Unix()})
 }
